Fixing alignment and adding scroll transitions

--- a/style.css
+++ b/style.css
@@ -45,9 +45,11 @@ hr {
 
 /* HEADER */
 
+li, #logo { transition: all 300ms; -webkit-transition: all 300ms; -moz-transition: all 300ms; -o-transition: all 300ms;}
+
 header {
   width: 100%;
-  height: 9%;
+  height: 80px;
   font-size: 25px;
   position: fixed;
   top: 0;
@@ -81,7 +83,7 @@ header nav {
 
 header nav ul li {
   float: left;
-  margin-right: 25px;
+  margin-left: 25px;
 
 }
 header nav ul li:hover {
@@ -100,11 +102,106 @@ header nav ul li a{
   background-attachment: fixed;
 }
 
+.main {
+  position: relative;
+  width: 100%;
+  height: 100vh;
 
-#home h1 {
-  margin: 21% auto 0 auto;
+}
+.main h1 {
+  margin: 0 auto 0 auto;
+  bottom: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   color: white;
   font-size: 450%;
+  text-shadow: 5px 5px 10px #000000;
+  position: absolute;
+
+}
+.main h2 {
+  margin: auto;
+  color: #f0f0f0;
+  font-size: 250%;
+  transform: translate(-50%, 30%);
+  text-shadow: 5px 5px 10px #000000;
+  position: absolute;
+  bottom: 45%;
+  left: 50%;
+
+}
+#home img{ transition: all 300ms; -webkit-transition: all 300ms; -moz-transition: all 300ms; -o-transition: all 300ms;}
+#home img {
+  position: absolute;
+  bottom: 30%;
+  left: 48%;
+  width: 5%;
+  opacity: 0.5;
+}
+
+#home img:hover {
+  opacity: 0.7;
+}
+
+/* ABOUT */
+
+#about img { transition: all 400ms; -webkit-transition: all 400ms; -moz-transition: all 400ms; -o-transition: all 400ms;}
+
+#about img {
+  width: 20%;
+}
 
 
+
+#about img:hover {
+  transform: scale(1.1);
+
+}
+
+#about h4 {
+  font-size: 30px;
+}
+
+#about p {
+  width: 70%;
+  margin: 0 auto 0 auto;
+  font-size: 20px;
+
+}
+
+/* PROJECTS */
+
+#projects {
+  background-color: #f0f0f0
+}
+
+#projects-div {
+  width: 70%;
+  margin: 0 auto 0 auto;
+  
+}
+
+#projects-div ul {
+  padding: 0;
+}
+
+#projects-div ul li {
+  width: 50%;
+  float: left;
+  padding-top: 2%;
+}
+
+/* FOOTER */
+
+footer {
+  width: 100%;
+  height: 10%;
+  background-color: #3f3f3f
+
+}
+
+footer p {
+  color: white;
+  font-size: 30px;
+  padding-top: 2%;
 }
